--- a/echo-sender/Cargo.toml
+++ b/echo-sender/Cargo.toml
@@ -12,4 +12,7 @@ memfd = "*"
 nix = { version = "*", features = ["fs", "mman", "uio", "socket", "event"] }
 vcell = "*"
 oside = { git = "https://github.com/ayourtch/oside.git" }
+bincode = "1.3.3"
+serde = { version = "1.0", features = ["derive"] }
 
+lazy_static = "*"
