--- a/echo-sender/Cargo.toml
+++ b/echo-sender/Cargo.toml
@@ -16,3 +16,10 @@ bincode = "1.3.3"
 serde = { version = "1.0", features = ["derive"] }
 
 lazy_static = "*"
+[dev-dependencies]
+criterion = "0.3"
+
+[[bench]]
+name = "rtt_benchmark"
+harness = false
+
